# SISU

./: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  declarations.d.ts  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  foreground.rs  lib.rs  main.rs  monitor.rs  notifications.rs  optimizer.rs  process_ctrl.rs  profiles.rs  rules.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/components/: AlertsPanel.tsx  Dashboard.tsx  ProcessTable.tsx  ProfilesPanel.tsx
